# mnist-pytorch

./: README.md  pyproject.toml
nn_pytorch/: mninst.ipynb
